# stellar-private-payments

./: .gitignore  CODEOWNERS  Cargo.toml  Makefile  README.md  Trunk.toml  deny.toml  package-lock.json  package.json
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: test-ignored.yml  wasm-build.yml
app/: ARCHITECTURE.md  index.html  package-lock.json  package.json  spm.html
app/crates/core/disclosure/: Cargo.toml
app/crates/core/prover/: Cargo.toml
app/crates/core/prover/src/: encryption.rs
app/crates/core/state/: Cargo.toml
app/crates/core/state/src/: events_parsers.rs  schema.sql  storage.rs
app/crates/core/stellar/: Cargo.toml
app/crates/core/stellar/src/: indexer.rs  rpc.rs  soroban_encode.rs  tx_prepare.rs
app/crates/core/tx-planner/: Cargo.toml
app/crates/core/types/: Cargo.toml
app/crates/core/types/src/: lib.rs
app/crates/core/witness/: Cargo.toml
app/js/: admin.js  sw.js  ui.js  wallet.js
app/js/spm/: spm-contract.js  spm-prover.js  spm-ui.js
app/js/ui/: navigation.js  onboarding-wizard.js  onchain-state.js  push-notifications.js
circuit-keys/: Cargo.toml
circuits/: Cargo.toml
circuits/spm/: commitment.circom  merkleproof.circom  prove.js  setup-vk.sh  vote.circom
circuits/testdata/: proof.json  verification_key.json
contracts/asp-membership/: Cargo.toml
contracts/asp-non-membership/: Cargo.toml
contracts/circom-groth16-verifier/: Cargo.toml
contracts/pool/: Cargo.toml
contracts/pool/src/: pool.rs  test.rs
contracts/public-key-registry/: Cargo.toml
contracts/public-key-registry/src/: lib.rs  test.rs
contracts/soroban-utils/: Cargo.toml
contracts/spm/: Cargo.toml
contracts/spm/src/: lib.rs  test.rs
contracts/types/: Cargo.toml
deployments/scripts/: deploy.sh
deployments/scripts/spm/: deploy.sh
deployments/testnet/: deployments.json
deployments/testnet/spm/: deployment.json
docs/: SPM_PRIVACY_ANALYSIS.md  vote_record_1782475374770.json  voting_flow_1782475375383.json  voting_flow_1782475392589.json
e2e-tests/: Cargo.toml
poseidon2/: Cargo.toml
scripts/: deploy_spm.sh  generate_proof.js  run_voting_flow.js  submit_vote.js  vote_spm.js  vote_with_sdk.js
tools/bootnode/: Cargo.toml
tools/bootnode/src/: lib.rs
tools/bootnode/tests/: rpc.rs
tools/ceremony-cli/: Cargo.toml
tools/prover/: README.md  package.json
tools/prover/src/: index.js  setup.js
