[workspace]
members = [
    "app/crates/core/disclosure",
    "app/crates/core/prover",
    "app/crates/core/state",
    "app/crates/core/stellar",
    "app/crates/core/tx-planner",
    "app/crates/core/types",
    "app/crates/core/witness",
    "app/crates/platforms/web",
    "circuit-keys",
    "circuits",
    "contracts/*",
    "e2e-tests",
    "poseidon2",
    "tools/ceremony-cli",
]
exclude = ["tools/bootnode"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/NethermindEth/stellar-private-transactions"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
# workspace
asp-membership = { path = "contracts/asp-membership" }
asp-non-membership = { path = "contracts/asp-non-membership" }
circom-groth16-verifier = { path = "contracts/circom-groth16-verifier" }
circuit-keys = { path = "circuit-keys" }
circuits = { path = "circuits", default-features = false }
contract-types = { path = "contracts/types" }
disclosure = { path = "app/crates/core/disclosure" }
pool = { path = "contracts/pool" }
prover = { path = "app/crates/core/prover" }
public-key-registry = { path = "contracts/public-key-registry" }
soroban-utils = { path = "contracts/soroban-utils" }
state = { path = "app/crates/core/state" }
stellar = { path = "app/crates/core/stellar" }
tx-planner = { path = "app/crates/core/tx-planner" }
types = { path = "app/crates/core/types" }
witness = { path = "app/crates/core/witness" }
zkhash = { path = "poseidon2" }

# external
anyhow = { version = "1", default-features = false }
ark-bn254 = { version = "0.6.0", default-features = false, features = ["curve"] }
ark-circom = { git = "https://github.com/NethermindEth/circom-compat.git", default-features = false, branch = "wasm-no-parallel" }
ark-ff = { version = "0.6.0", default-features = false }
ark-groth16 = { version = "0.6.0", default-features = false }
ark-relations = { version = "0.6.0", default-features = false }
ark-serialize = { version = "0.6.0", default-features = false }
ark-snark = { version = "0.6.0", default-features = false }
ark-std = { version = "0.6.0", default-features = false, features = ["std"] }
async-trait = { version = "0.1.89", default-features = false }
cfg-if = { version = "1", default-features = false }
console_error_panic_hook = { version = "0.1.7", default-features = false }
futures = { version = "0.3.32", default-features = false, features = ["async-await"] }
getrandom = { version = "0.2", default-features = false }
gloo-timers = { version = "0.4", default-features = false, features = ["futures"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }
num-bigint = { version = "0.4.6", default-features = false, features = ["serde"] }
num-integer = { version = "0.1.46", default-features = false }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
rusqlite = { version = "0.39.0", default-features = false, features = ["buildtime_bindgen"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde-wasm-bindgen = { version = "0.6", default-features = false }
serde_json = { version = "1", default-features = false }
sha2 = { version = "0.11.0", default-features = false }
soroban-sdk = { version = "26", default-features = false, features = ["hazmat"] }
thiserror = { version = "2", default-features = false }
uint = { version = "0.10", default-features = false }
wasm-bindgen = { version = "0.2", default-features = false, features = ["serde-serialize"] }
wasm-bindgen-test = { version = "0.3", default-features = false, features = ["std"] }
wasm-log = { version = "0.3", default-features = false }
# see also https://github.com/NethermindEth/stellar-private-payments/issues/192
wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "763e9f2800644f51ce27f6f5c1752776da16ddd1", shallow = true, default-features = false }

[workspace.lints.rust]
missing_docs = "allow"
unsafe_code = "deny"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[patch.crates-io]
cranelift-control = { path = "vendor/cranelift-control" }
