[package]
name = "circuit-keys"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# external
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
num-bigint = { workspace = true }
serde_json = { workspace = true, features = ["std"] }

[lints]
workspace = true
