[package]
name = "circuits"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["std"]
std = [
    "anyhow",
    "ark-bn254",
    "ark-circom",
    "ark-ff",
    "ark-groth16",
    "ark-serialize",
    "ark-snark",
    "ark-std",
    "num-bigint",
    "num-integer",
]

[dependencies]
# workspace
# Core dependencies (no_std compatible)
zkhash = { workspace = true }

# external
# Test utilities dependencies (std only — used by the `test` module)
anyhow = { workspace = true, optional = true }
ark-bn254 = { workspace = true, optional = true }
ark-circom = { workspace = true, optional = true }
ark-ff = { workspace = true, optional = true }
ark-groth16 = { workspace = true, optional = true }
ark-serialize = { workspace = true, optional = true }
ark-snark = { workspace = true, optional = true }
ark-std = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
num-integer = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# external
ark-circom = { workspace = true, features = ["parallel"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# external
ark-circom = { workspace = true, optional = true }

[build-dependencies]
# workspace
circuit-keys = { workspace = true }

# external
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-circom = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = "0.6.0"
ark-snark = { workspace = true }
ark-std = { workspace = true }
compiler = { git = "https://github.com/iden3/circom", tag = "v2.2.3" }
constraint_generation = { git = "https://github.com/iden3/circom", tag = "v2.2.3" }
constraint_writers = { git = "https://github.com/iden3/circom", tag = "v2.2.3" }
num-bigint = { workspace = true }
parser = { git = "https://github.com/iden3/circom", tag = "v2.2.3" }
program_structure = { git = "https://github.com/iden3/circom", tag = "v2.2.3" }
regex = "1"
type_analysis = { git = "https://github.com/iden3/circom", tag = "v2.2.3" }
wast = "248.0.0"

[lints]
workspace = true
