[package]
name = "zkhash"
version = "0.2.0"
authors = [
    "Markus Schofnegger <mschofnegger@horizenlabs.io>",
    "Roman Walch <roman.walch@iaik.tugraz.at>",
]
description = "Rust implementations of Poseidon2 and similar arithmetization-oriented primitives"
edition = "2018"
license = "Apache-2.0 OR MIT"

[features]
default = []
asm = ["ark-ff/asm"]

[dependencies]
# external
ark-ff = { workspace = true }
cfg-if = { workspace = true }
hex = { workspace = true }
lazy_static = "1.5"
rand = "0.8"

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3

[profile.bench]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3
