[package]
name = "circom-groth16-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
# workspace
contract-types = { workspace = true }

# external
soroban-sdk = { workspace = true, features = ["alloc"] }

[build-dependencies]
# workspace
circuit-keys = { workspace = true }

# external
ark-bn254 = { workspace = true }
serde_json = { workspace = true, features = ["std"] }

[dev-dependencies]
# workspace
soroban-utils = { workspace = true }

# external
ark-bn254 = { workspace = true }
ark-circom = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-std = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }

[lints]
workspace = true
