[package]
name = "pool"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
# workspace
contract-types.workspace = true
soroban-utils.workspace = true

# external
soroban-sdk.workspace = true

[dev-dependencies]
# workspace
asp-membership = { workspace = true }
asp-non-membership = { workspace = true }
circom-groth16-verifier = { workspace = true }

# external
soroban-sdk = { workspace = true, features = ["testutils"] }

[lints]
workspace = true
