[package]
name = "soroban-utils"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
# workspace
contract-types = { workspace = true }

# external
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
soroban-sdk = { workspace = true }

[lints]
workspace = true
