[package]
name = "contract-types"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
# external
soroban-sdk = { workspace = true, features = ["alloc"] }

[lints]
workspace = true
