[package]
name = "ceremony-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "ceremony-cli"
path = "src/main.rs"

[dependencies]
# workspace
circuit-keys.workspace = true

# external
anyhow.workspace = true
ark-bn254.workspace = true
ark-circom.workspace = true
ark-groth16.workspace = true
ark-serialize.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
getrandom.workspace = true
glob = "0.3.3"
shlex = "1.3.0"
zeroize = "1.8.2"

[lints]
workspace = true
