[package]
name = "disclosure"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "Selective disclosure receipt validation and circuit metadata"

[dependencies]
# workspace
prover = { workspace = true }
types = { workspace = true }

# external
anyhow = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
