[package]
name = "state"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "SQLite-backed application state"
build = "build.rs"

[dependencies]
# workspace
stellar = { workspace = true }
types = { workspace = true, features = ["rusqlite"] }

# external
anyhow = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { version = "2.5.0", default-features = false }

[build-dependencies]
# external
hex = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
# workspace
prover = { workspace = true }

[lints]
workspace = true
