[package]
name = "stellar"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# workspace
types = { workspace = true }

# external
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
ed25519-dalek = { version = "2.2", default-features = false, features = ["digest", "zeroize"] }
futures = { workspace = true, features = ["executor"] }
http = "1.4.0"
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde-aux = "4.7.0"
serde_json = { workspace = true }
sha2 = { workspace = true }
sha3 = { version = "0.11", default-features = false }
stellar-strkey = "0.0.16"
stellar-xdr = { version = "26.0.0", features = ["curr", "serde", "base64", "std", "alloc"] }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# external
gloo-timers = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
contract-types = { workspace = true }
pool = { workspace = true }
public-key-registry = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[lints]
workspace = true
