[package]
name = "witness"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "Browser WASM module for Circom witness generation using ark-circom"

[dependencies]
# external
anyhow = { workspace = true }
# Arkworks
ark-bn254 = { workspace = true }
ark-circom = { workspace = true }
# BigInt support for input parsing
num-bigint = { workspace = true }
# JSON parsing
serde_json = { workspace = true, default-features = false, features = ["alloc", "std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# external
ark-circom = { workspace = true, features = ["parallel"] }
# see https://github.com/NethermindEth/stellar-private-payments/issues/192
wasmer = { workspace = true, features = ["cranelift"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# external
ark-circom = { workspace = true }
wasmer = { workspace = true, features = ["js", "js-default"] }

[lints]
workspace = true
